# brazil-city-population-pib-scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  municipios.db  pyproject.toml  tox.ini
src/: city_collector.py  city_data_scraper.py  dashboard.py  data_processor.py  database_manager.py  filters.py  main.py  models.py  seeder.py  updater.py  utils.py  visualizations.py
tests/: test_city_collector.py  test_city_scraper.py  test_datatabase_manager.py  test_main.py  test_models.py  test_seeder.py
