[tool.poetry]
name = "brazil-city-population-pib-scraper"
version = "0.1.0"
description = "A scraper for Brasil cities population and PIB (Gross Domestic Product) data."
authors = ["Alex Silva <alexandre.silva@garupa.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.36"
colorama = "^0.4.6"
aiohttp = "^3.11.10"
tenacity = "^9.0.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
streamlit = "^1.41.0"
aiosqlite = "^0.20.0"
prompt-toolkit = "^3.0.48"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
